<resources>
    <string name="app_name">TryIt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_shoppinglist">Shopping List</string>
    <string name="menu_draftrecipe">Draft Recipe</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_generatedrecipes">Generate Recipes</string>
    <string name="menu_otherecipes">Other Recipes</string>
    <string name="menu_postrecipes">Post Recipes</string>
    <string name="menu_stores">Stores</string>
    <string name="menu_send">Send</string>

    <string name="draftrecipe_recipe_name">Recipe Name</string>
    <string name="draftrecipe_ingredients">Ingredients</string>
    <string name="draftrecipe_directions">Directions</string>
    <string name="type_here">Type Here</string>
    <string name="save_button">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_recipe_">Recipe_Activity</string>
    <string name="title_activity_stores_fragment">Map</string>
    <string name="google_maps_key" translatable="false">AIzaSyCacj76RsthAq7E7pYGVD9OWFlFnyYrvIw</string>
    <string name="title_activity_stores">Map</string>


</resources>
