<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.tryit.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_generatedrecipes"
        android:name="com.example.tryit.ui.generatedrecipes.GeneratedRecipesFragment"
        android:label="@string/menu_generatedrecipes"
        tools:layout="@layout/fragment_generatedrecipes" />

    <fragment
        android:id="@+id/nav_postrecipes"
        android:name="com.example.tryit.ui.postrecipe.PostRecipesFragment"
        android:label="@string/menu_postrecipes"
        tools:layout="@layout/fragment_postrecipes" />

    <fragment
        android:id="@+id/nav_stores"
        android:name="com.example.tryit.ui.stores.StoresFragment"
        android:label="@string/menu_stores"
        tools:layout="@layout/fragment_stores" />

    <fragment
        android:id="@+id/nav_shoppinglist"
        android:name="com.example.tryit.ui.shoppinglist.ShoppingListFragment"
        android:label="@string/menu_shoppinglist"
        tools:layout="@layout/fragment_shoppinglist" />

    <fragment
        android:id="@+id/nav_draftrecipes"
        android:name="com.example.tryit.ui.draftrecipe.DraftRecipeFragment"
        android:label="@string/menu_draftrecipe"
        tools:layout="@layout/fragment_draftrecipe" />
</navigation>